--- a/targets/ESP32/CMakeLists.txt
+++ b/targets/ESP32/CMakeLists.txt
@@ -9,6 +9,23 @@ include(binutils.ESP32)
 # Set target series in lower case
 nf_set_esp32_target_series()
 
+# Options for Wire Protocol channel
+option(HAL_WP_USE_SERIAL "option to use serial port (UART) to route Wire Protocol")
+option(HAL_WP_USE_USB_CDC "option to use USB CDC to route Wire Protocol")
+
+if(HAL_WP_USE_SERIAL)
+    message(STATUS "Wire Protocol will use serial port (UART).")
+    set(HAL_WP_USE_SERIAL_OPTION TRUE CACHE INTERNAL "set HAL_WP_USE_SERIAL")
+    set(HAL_WP_USE_USB_CDC_OPTION FALSE CACHE INTERNAL "set HAL_WP_USE_USB_CDC")
+elseif(HAL_WP_USE_USB_CDC)
+    message(STATUS "Wire Protocol will use USB CDC.")
+    set(HAL_WP_USE_SERIAL_OPTION FALSE CACHE INTERNAL "set HAL_WP_USE_SERIAL")
+    set(HAL_WP_USE_USB_CDC_OPTION TRUE CACHE INTERNAL "set HAL_WP_USE_USB_CDC")
+else()
+    set(HAL_WP_USE_SERIAL_OPTION FALSE CACHE INTERNAL "set HAL_WP_USE_SERIAL")
+    set(HAL_WP_USE_USB_CDC_OPTION FALSE CACHE INTERNAL "set HAL_WP_USE_USB_CDC")
+endif()
+
 # checking unsupported features
 if(${TARGET_SERIES_SHORT} STREQUAL "esp32c3" AND ${API_nanoFramework.Hardware.Esp32.Rmt})
     message(FATAL_ERROR "Currently RMT is not supported for ESP32-C3 builds")
